--- a/restful-dms-ui/src/app/login/login.component.html
+++ b/restful-dms-ui/src/app/login/login.component.html
@@ -1,28 +1,60 @@
 <main>
-  <div class="view" id="intro" *ngIf="!currentUser">  
-    <div class="mask flex-center waves-effect waves-light rgba-stylish-strong">
-     </div>  
+  <div class="view" id="intro" *ngIf="!currentUser">
+    <div class="mask flex-center waves-effect waves-light rgba-stylish-strong"></div>
 
-     <div class="container h-100">  
+    <div class="container h-100">
+      <div class="row align-items-center h-100">
+        <div class="col-6 mx-auto p-0">
+          <div class="card h-100  justify-content-center">
+            <h5 class="card-header unique-color white-text text-center py-4">
+              <strong>Sign in</strong>
+            </h5>
 
-       <div class="row align-items-center h-100">  
+            <div class="card-body p-0">
+              <!-- Default form login -->
+              <form class="text-center p-4">
+                <!-- Email -->
+                <div class="md-form">
+                  <input type="email" id="materialLoginFormEmail" class="form-control" mdbInput />
+                  <label for="materialLoginFormEmail">E-mail</label>
+                </div>
 
-         <div class="col-6 mx-auto p-0">  
+                <!-- Password -->
+                <div class="md-form">
+                  <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput />
+                  <label for="materialLoginFormPassword">Password</label>
+                </div>
 
-           <div class="card h-100  justify-content-center">  
+                <!-- Remember me container -->
+                <div class="d-flex justify-content-around">
+                  <div>
+                    <!-- Remember me -->
+                    <mdb-checkbox [default]="true">Remember me</mdb-checkbox>
+                  </div>
+                  <div>
+                    <!-- Forgot password -->
+                    <a href="">Forgot password?</a>
+                  </div>
+                </div>
 
-             <h5 class="card-header unique-color white-text text-center py-4">  
-               <strong>Sign in</strong>  
-             </h5>  
+                <!-- Sign in button -->
+                <button mdbBtn color="info" outline="true" block="true" class="my-4 waves-effect z-depth-0"
+                  mdbWavesEffect type="submit" style="border-radius: 20px">
+                  Sign in
+                </button>
 
-             <div class="card-body">  
-               ...card content...  
-             </div>  
-           </div>  
+                <!-- Register -->
+                <p>
+                  Not a member?
+                  <a href="">Register</a>
+                </p>
 
-         </div>  
-       </div>  
-     </div>  
-
-   </div>
+              </form>
+              <!-- Default form login -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
