--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -2,7 +2,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 #intro {
-    background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg');
+    // background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2016/04/12/22/35/watercolour-1325656_1280.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
