--- a/restful-dms-ui/src/app/app.component.html
+++ b/restful-dms-ui/src/app/app.component.html
@@ -6,5 +6,5 @@
   </div>
 </nav>
 
-<!-- <router-outlet></router-outlet> -->
-<app-login></app-login>
+<router-outlet></router-outlet>
+<!-- <app-home></app-home> -->
