--- a/restful-dms-ui/src/app/login/login.component.html
+++ b/restful-dms-ui/src/app/login/login.component.html
@@ -14,17 +14,27 @@
 
             <div class="card-body p-0">
               <!-- Default form login -->
-              <form class="text-center p-4">
-                <!-- Email -->
+              <form class="text-center p-4" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <!-- Login -->
                 <div class="md-form">
-                  <input type="email" id="materialLoginFormEmail" class="form-control" mdbInput />
-                  <label for="materialLoginFormEmail">E-mail</label>
+                  <input type="text" id="materialLoginFormUsername" class="form-control" formControlName="username"
+                    mdbInput [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                  <label for="materialLoginFormUsername">Username</label>
+
+                  <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                    <div *ngIf="f.username.errors.required">Username is required</div>
+                  </div>
                 </div>
 
                 <!-- Password -->
                 <div class="md-form">
-                  <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput />
+                  <input type="password" id="materialLoginFormPassword" class="form-control" formControlName="password"
+                    mdbInput [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                   <label for="materialLoginFormPassword">Password</label>
+
+                  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                    <div *ngIf="f.password.errors.required">Password is required</div>
+                  </div>
                 </div>
 
                 <!-- Remember me container -->
@@ -41,7 +51,7 @@
 
                 <!-- Sign in button -->
                 <button mdbBtn outline="true" block="true" class="my-4 waves-effect z-depth-0 signInBtn" mdbWavesEffect
-                  type="submit" >
+                  type="submit">
                   Sign in
                 </button>
 
