--- a/restful-dms-ui/src/app/login/login.component.scss
+++ b/restful-dms-ui/src/app/login/login.component.scss
@@ -3,3 +3,22 @@
     color: #0099CC;
     border: 2px solid #0099CC;
 }
+
+a:link {
+    color: #0000FF;
+  }
+  
+  a:visited {
+    color: #0B0080;
+  }
+  
+  a:hover {
+    color: #772233;
+  }
+  
+  a:active {
+    color: #FF0000;
+  }
+
+  
+  
