--- a/restful-dms-ui/src/app/login/login.component.html
+++ b/restful-dms-ui/src/app/login/login.component.html
@@ -18,9 +18,9 @@
               <form class="text-center p-4" [formGroup]="loginForm" (ngSubmit)="onLogin()">
                 <!-- Login -->
                 <div class="md-form">
-                  <input type="text" id="materialLoginFormUsername" class="form-control" formControlName="username"
+                  <input type="text" id="usernameLogin" class="form-control" formControlName="username"
                          mdbInput [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
-                  <label for="materialLoginFormUsername">Username</label>
+                  <label for="usernameLogin">Username</label>
 
                   <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                     <div *ngIf="f.username.errors.required">Username is required</div>
@@ -29,9 +29,9 @@
 
                 <!-- Password -->
                 <div class="md-form">
-                  <input type="password" id="materialLoginFormPassword" class="form-control" formControlName="password"
+                  <input type="password" id="passwordLogin" class="form-control" formControlName="password"
                          mdbInput [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
-                  <label for="materialLoginFormPassword">Password</label>
+                  <label for="passwordLogin">Password</label>
 
                   <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                     <div *ngIf="f.password.errors.required">Password is required</div>
@@ -73,56 +73,66 @@
               <form class="text-center p-4" [formGroup]="registerForm" (ngSubmit)="onRegister()">
 
                 <div class="md-form">
-                  <input type="text" id="materialRegisterFormUsername" class="form-control" formControlName="username"
+                  <input type="text" id="username" class="form-control" formControlName="username"
                          mdbInput [ngClass]="{ 'is-invalid': submitted && rf.username.errors }"/>
-                  <label for="materialRegisterFormUsername">Username</label>
+                  <label for="username">Username</label>
 
                   <div *ngIf="submitted && rf.username.errors" class="invalid-feedback">
                     <div *ngIf="rf.username.errors.required">Username is required</div>
+                    <div *ngIf="rf.username.errors.minlength">Username must be at least 5 characters long</div>
                   </div>
                 </div>
 
                 <!-- Password -->
                 <div class="md-form">
-                  <input type="password" id="materialRegisterFormPassword" class="form-control" formControlName="password"
+                  <input type="password" id="password" class="form-control"
+                         formControlName="password"
                          mdbInput [ngClass]="{ 'is-invalid': submitted && rf.password.errors }"/>
-                  <label for="materialRegisterFormPassword">Password</label>
+                  <label for="password">Password</label>
 
                   <div *ngIf="submitted && rf.password.errors" class="invalid-feedback">
                     <div *ngIf="rf.password.errors.required">Password is required</div>
+                    <div *ngIf="rf.password.errors.pattern">Password must be at least 8 characters long
+                      and contain at least one lowercase letter, uppercase letter, number and special character
+                    </div>
+
                   </div>
                 </div>
 
                 <!-- First name -->
                 <div class="md-form">
-                  <input type="password" id="materialLoginFormPassword" class="form-control" formControlName="password"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
-                  <label for="materialLoginFormPassword">First Name</label>
+                  <input type="text" id="firstName" class="form-control" formControlName="firstName"
+                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.firstName.errors }" required/>
+                  <label for="firstName">First Name</label>
 
-                  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">First Name</div>
+                  <div *ngIf="submitted && rf.firstName.errors" class="invalid-feedback">
+                    <div *ngIf="rf.firstName.errors.required">First Name is required</div>
+                    <div *ngIf="rf.firstName.errors.pattern">First Name must contain only letters</div>
+                    <div>elo</div>
                   </div>
                 </div>
 
                 <!-- Last name -->
                 <div class="md-form">
-                  <input type="password" id="materialLoginFormPassword" class="form-control" formControlName="password"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
-                  <label for="materialLoginFormPassword">Last Name</label>
+                  <input type="text" id="lastName" class="form-control" formControlName="lastName"
+                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.lastName.errors }"/>
+                  <label for="lastName">Last Name</label>
 
-                  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Last Name req</div>
+                  <div *ngIf="submitted && rf.lastName.errors" class="invalid-feedback">
+                    <div *ngIf="rf.lastName.errors.required">Last Name is required</div>
+                    <div *ngIf="rf.lastName.errors.pattern">Last Name must contain only letters</div>
                   </div>
                 </div>
 
                 <!-- E-mail -->
                 <div class="md-form">
-                  <input type="email" id="materialLoginFormPassword" class="form-control" formControlName="password"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
-                  <label for="materialLoginFormPassword">E-mail</label>
+                  <input type="email" id="email" class="form-control" formControlName="email"
+                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.email.errors }"/>
+                  <label for="email">E-mail</label>
 
-                  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">E-mail req</div>
+                  <div *ngIf="submitted && rf.email.errors" class="invalid-feedback">
+                    <div *ngIf="rf.email.errors.required">E-mail is required</div>
+                    <div *ngIf="rf.email.errors.email">Provide a valid email address.</div>
                   </div>
                 </div>
 
