--- a/restful-dms-ui/src/app/login/login.component.html
+++ b/restful-dms-ui/src/app/login/login.component.html
@@ -19,22 +19,22 @@
                 <!-- Login -->
                 <div class="md-form">
                   <input type="text" id="usernameLogin" class="form-control" formControlName="username"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
+                         [ngClass]="{ 'is-invalid': submitted && loginFormControls.username.errors }" mdbInput/>
                   <label for="usernameLogin">Username</label>
 
-                  <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                    <div *ngIf="f.username.errors.required">Username is required</div>
+                  <div *ngIf="submitted && loginFormControls.username.errors" class="invalid-feedback">
+                    <div *ngIf="loginFormControls.username.errors.required">Username is required</div>
                   </div>
                 </div>
 
                 <!-- Password -->
                 <div class="md-form">
                   <input type="password" id="passwordLogin" class="form-control" formControlName="password"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+                         [ngClass]="{ 'is-invalid': submitted && loginFormControls.password.errors }" mdbInput/>
                   <label for="passwordLogin">Password</label>
 
-                  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
+                  <div *ngIf="submitted && loginFormControls.password.errors" class="invalid-feedback">
+                    <div *ngIf="loginFormControls.password.errors.required">Password is required</div>
                   </div>
                 </div>
 
@@ -74,12 +74,14 @@
 
                 <div class="md-form">
                   <input type="text" id="username" class="form-control" formControlName="username"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.username.errors }"/>
+                         [ngClass]="{ 'is-invalid': submitted && registerFormControls.username.errors }" mdbInput/>
                   <label for="username">Username</label>
 
-                  <div *ngIf="submitted && rf.username.errors" class="invalid-feedback">
-                    <div *ngIf="rf.username.errors.required">Username is required</div>
-                    <div *ngIf="rf.username.errors.minlength">Username must be at least 5 characters long</div>
+                  <div *ngIf="submitted && registerFormControls.username.errors" class="invalid-feedback">
+                    <div *ngIf="registerFormControls.username.errors.required">Username is required</div>
+                    <div *ngIf="registerFormControls.username.errors.minlength">Username must be at least 5 characters
+                      long
+                    </div>
                   </div>
                 </div>
 
@@ -87,12 +89,13 @@
                 <div class="md-form">
                   <input type="password" id="password" class="form-control"
                          formControlName="password"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.password.errors }"/>
+                         [ngClass]="{ 'is-invalid': submitted && registerFormControls.password.errors }" mdbInput/>
                   <label for="password">Password</label>
 
-                  <div *ngIf="submitted && rf.password.errors" class="invalid-feedback">
-                    <div *ngIf="rf.password.errors.required">Password is required</div>
-                    <div *ngIf="rf.password.errors.pattern">Password must be at least 8 characters long
+                  <div *ngIf="submitted && registerFormControls.password.errors" class="invalid-feedback">
+                    <div *ngIf="registerFormControls.password.errors.required">Password is required</div>
+                    <div *ngIf="registerFormControls.password.errors.pattern">Password must be at least 8 characters
+                      long
                       and contain at least one lowercase letter, uppercase letter, number and special character
                     </div>
 
@@ -102,12 +105,14 @@
                 <!-- First name -->
                 <div class="md-form">
                   <input type="text" id="firstName" class="form-control" formControlName="firstName"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.firstName.errors }" required/>
+                         [ngClass]="{ 'is-invalid': submitted && registerFormControls.firstName.errors }" mdbInput
+                         required/>
                   <label for="firstName">First Name</label>
 
-                  <div *ngIf="submitted && rf.firstName.errors" class="invalid-feedback">
-                    <div *ngIf="rf.firstName.errors.required">First Name is required</div>
-                    <div *ngIf="rf.firstName.errors.pattern">First Name must contain only letters</div>
+                  <div *ngIf="submitted && registerFormControls.firstName.errors" class="invalid-feedback">
+                    <div *ngIf="registerFormControls.firstName.errors.required">First Name is required</div>
+                    <div *ngIf="registerFormControls.firstName.errors.pattern">First Name must contain only letters
+                    </div>
                     <div>elo</div>
                   </div>
                 </div>
@@ -115,24 +120,24 @@
                 <!-- Last name -->
                 <div class="md-form">
                   <input type="text" id="lastName" class="form-control" formControlName="lastName"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.lastName.errors }"/>
+                         [ngClass]="{ 'is-invalid': submitted && registerFormControls.lastName.errors }" mdbInput/>
                   <label for="lastName">Last Name</label>
 
-                  <div *ngIf="submitted && rf.lastName.errors" class="invalid-feedback">
-                    <div *ngIf="rf.lastName.errors.required">Last Name is required</div>
-                    <div *ngIf="rf.lastName.errors.pattern">Last Name must contain only letters</div>
+                  <div *ngIf="submitted && registerFormControls.lastName.errors" class="invalid-feedback">
+                    <div *ngIf="registerFormControls.lastName.errors.required">Last Name is required</div>
+                    <div *ngIf="registerFormControls.lastName.errors.pattern">Last Name must contain only letters</div>
                   </div>
                 </div>
 
                 <!-- E-mail -->
                 <div class="md-form">
                   <input type="email" id="email" class="form-control" formControlName="email"
-                         mdbInput [ngClass]="{ 'is-invalid': submitted && rf.email.errors }"/>
+                         [ngClass]="{ 'is-invalid': submitted && registerFormControls.email.errors }" mdbInput/>
                   <label for="email">E-mail</label>
 
-                  <div *ngIf="submitted && rf.email.errors" class="invalid-feedback">
-                    <div *ngIf="rf.email.errors.required">E-mail is required</div>
-                    <div *ngIf="rf.email.errors.email">Provide a valid email address.</div>
+                  <div *ngIf="submitted && registerFormControls.email.errors" class="invalid-feedback">
+                    <div *ngIf="registerFormControls.email.errors.required">E-mail is required</div>
+                    <div *ngIf="registerFormControls.email.errors.email">Provide a valid email address.</div>
                   </div>
                 </div>
 
