Add fortawesome icons

--- a/restful-dms-ui/src/app/app.component.html
+++ b/restful-dms-ui/src/app/app.component.html
@@ -6,6 +6,6 @@
 <!--</div>-->
 <!--</nav>-->
 
-<app-navigation *ngIf="currentUser"></app-navigation>
+<app-navigation *ngIf="false"></app-navigation>
 
 <router-outlet></router-outlet>
