--- a/restful-dms-ui/src/app/home/home.component.html
+++ b/restful-dms-ui/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-home works
+<mdb-icon fas icon="camera-retro"></mdb-icon> camera-retro
+<i class="far fa-gift-card">sdsdv</i>
+<span class="fas fa-chevron-left"></span>
+<a class="nav-link" href="//www.facebook.com/xxx" target="_blank"><i class="fab fa-facebook-f"></i></a>
