--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -16,22 +16,23 @@
     height: 100%;
   }
 
-//@media (max-width: 740px) {
-//  html,
-//  body,
-//  header,
-//  .view {
-//    height: 1000px;
-//  }
-//}
-//@media (min-width: 800px) and (max-width: 850px) {
-//  html,
-//  body,
-//  header,
-//  .view {
-//    height: 600px;
-//  }
-//}
+@media (max-width: 740px) {
+  html,
+  body,
+  header,
+  .view {
+    height: 1000px;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 850px) {
+  html,
+  body,
+  header,
+  .view {
+    height: 600px;
+  }
+}
 
 /* You can add global styles to this file, and also import other style files */
 
