Align main within navigation

--- a/restful-dms-ui/src/app/navigation/navigation.component.html
+++ b/restful-dms-ui/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
   <div class="sidebar-fixed position-fixed">
 
     <a class="logo-wrapper waves-effect">
-      <img alt="" class="img-fluid" src="../../../../assets/logo.png">
+      <img alt="" class="img-fluid" src="../../../../assets/profile-placeholder.png">
     </a>
 
     <div class="list-group list-group-flush">
@@ -72,7 +72,7 @@
       <ul class="navbar-nav nav-flex-icons">
 
         <li class="nav-item">
-          <a class="nav-link" href="" mdbWavesEffect target="_blank">
+          <a class="nav-link" href="" mdbWavesEffect target="_blank">dfdf
           </a>
         </li>
         <li class="nav-item">
