--- a/restful-dms-ui/src/app/app.component.html
+++ b/restful-dms-ui/src/app/app.component.html
@@ -1,11 +1,2 @@
-<!-- nav -->
-<!--<nav class="navbar navbar-expand fixed-top navbar-dark bg-dark" *ngIf="currentUser.token">-->
-<!--<div class="navbar-nav">-->
-<!--<a class="nav-item nav-link" routerLink="/">Home</a>-->
-<!--<a class="nav-item nav-link" (click)="logout()">Logout</a>-->
-<!--</div>-->
-<!--</nav>-->
-
-<app-navigation *ngIf="false"></app-navigation>
-
+<app-navigation *ngIf="currentUser"></app-navigation>
 <router-outlet></router-outlet>
