--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -16,6 +16,98 @@
     height: 100%;
   }
 
+main {
+  //padding-top: 70px;
+  padding: 70px 20px 20px 20px;
+}
+
+// Sidebar
+
+#sidebar {
+  //background-image: url('https://cdn.pixabay.com/photo/2016/04/12/22/35/watercolour-1325656_1280.jpg');
+  //background-color: #383547;
+  background-color: #2f353a;
+}
+
+.sidebar-fixed {
+  height: 100vh;
+  width: 270px;
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+  z-index: 1050;
+  padding: 0 1.5rem 1.5rem
+}
+
+.sidebar-fixed .logo-wrapper {
+  padding: 2.5rem
+}
+
+.sidebar-fixed .logo-wrapper img {
+  max-height: 50px
+}
+
+.sidebar-fixed .list-group-item {
+  background-color: #2f353a;
+  color: ghostwhite;
+  font-size: 90%;
+  margin: 0;
+
+  &:hover {
+    color: #D3D3D3; /*#20a8d8;*/
+    background-color: #4B515D; /*#3E4551;*/
+    border-left: 5px solid #0099CC /*#20a8d8*/
+  ;
+  }
+
+  &:active {
+    color: #20a8d8; /*#20a8d8;*/
+    background-color: #4B515D; /*#3E4551;*/
+  }
+}
+
+//.sidebar-fixed .list-group .active {
+//  -webkit-box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
+//  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
+//  -webkit-border-radius: 0;
+//  border-radius: 0;
+//  color: #20a8d8;
+//  background-color: #4B515D;
+//}
+
+.sidebar-fixed .list-group-item-title {
+  padding: .50rem /*1rem*/
+;
+  font-size: 80%;
+  font-weight: 700;
+  color: #e4e7ea;
+  text-transform: uppercase;
+}
+
+// Navbar
+
+.navbar {
+  //height: 70px;
+  background-color: #0099CC;
+}
+
+.navbar .ul .li {
+  color: #ffffff
+}
+
+// Media queries
+
+@media (min-width: 1200px) {
+  .navbar, .page-footer, main {
+    margin-left: 270px
+  }
+}
+
+@media (max-width: 1199.98px) {
+  .sidebar-fixed {
+    display: none
+  }
+}
+
 //@media (max-width: 740px) {
 //  html,
 //  body,
@@ -34,52 +126,15 @@
 //  }
 //}
 
-main {
-  //padding-top: 70px;
-  padding: 70px 20px 20px 20px;
-}
-
-.sidebar-fixed {
-  height: 100vh;
-  width: 270px;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-  z-index: 1050;
-  background-color: #fff;
-  padding: 0 1.5rem 1.5rem
-}
 
 .sidebar-fixed .list-group .active {
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
   -webkit-border-radius: 5px;
-  border-radius: 5px
+  border-radius: 5px;
+  color: #D3D3D3;
+  background-color: /*#0099CC*/
+    #3F729B;
 }
-
-.sidebar-fixed .logo-wrapper {
-  padding: 2.5rem
-}
-
-.sidebar-fixed .logo-wrapper img {
-  max-height: 50px
-}
-
-.navbar {
-  //height: 70px;
-}
-
-@media (min-width: 1200px) {
-  .navbar, .page-footer, main {
-    margin-left: 270px
-  }
-}
-
-@media (max-width: 1199.98px) {
-  .sidebar-fixed {
-    display: none
-  }
-}
-
-  
   
   
