--- a/restful-dms-ui/src/app/navigation/navigation.component.html
+++ b/restful-dms-ui/src/app/navigation/navigation.component.html
@@ -13,11 +13,11 @@
 
       <a class="list-group-item list-group-item-action waves-effect" href="/home" routerLink="/home"
          routerLinkActive="active">
-        <mdb-icon class="mr-3" fas icon="chart-pie"></mdb-icon>Dashboard
+        <mdb-icon class="mr-3" fas icon="chart-pie"></mdb-icon>Wszystkie
       </a>
       <a class="list-group-item list-group-item-action waves-effect " routerLink="profiles/profile1"
          routerLinkActive="active">
-        <mdb-icon class="mr-3" fas icon="user"></mdb-icon>Profile
+        <mdb-icon class="mr-3" fas icon="user"></mdb-icon>Własne
       </a>
       <a class="list-group-item list-group-item-action waves-effect " routerLink="tables/table1"
          routerLinkActive="active">
@@ -37,12 +37,12 @@
   <!-- Sidebar -->
 
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light white fixed-top unique-color" [containerInside]="false">
+  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light fixed-top stylish-color-dark" [containerInside]="false">
 
     <!-- Navbar brand -->
     <logo class="ml-5">
       <a class="navbar-brand" href="">
-        <strong class="white-text">RESTful DMS</strong>
+        <strong class="white-text" id="logo-text">RESTful DMS</strong>
       </a>
     </logo>
 
