--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -48,31 +48,36 @@ main {
 
 .sidebar-fixed .list-group-item {
   background-color: #2f353a;
-  color: ghostwhite;
+  color: #D3D3D3;
   font-size: 90%;
   margin: 0;
 
   &:hover {
-    color: #D3D3D3; /*#20a8d8;*/
+    color: ghostwhite; /*#20a8d8;*/
     background-color: #4B515D; /*#3E4551;*/
-    border-left: 5px solid #0099CC /*#20a8d8*/
-  ;
+    border-left: 5px solid #0099CC; /*#20a8d8*/
+
   }
 
   &:active {
     color: #20a8d8; /*#20a8d8;*/
-    background-color: #4B515D; /*#3E4551;*/
   }
 }
 
-//.sidebar-fixed .list-group .active {
-//  -webkit-box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
-//  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
-//  -webkit-border-radius: 0;
-//  border-radius: 0;
-//  color: #20a8d8;
-//  background-color: #4B515D;
-//}
+.sidebar-fixed .list-group .active {
+  -webkit-box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
+  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+  color: ghostwhite;
+  background-color: /*#0099CC*/
+    #3F729B;
+  border: none;
+
+  &:hover {
+    border-left: 0px solid #0099CC; /*#20a8d8*/
+  }
+}
 
 .sidebar-fixed .list-group-item-title {
   padding: .50rem /*1rem*/
@@ -85,14 +90,14 @@ main {
 
 // Navbar
 
-.navbar {
-  //height: 70px;
-  background-color: #0099CC;
+#logo-text {
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-.navbar .ul .li {
-  color: #ffffff
-}
+//.navbar .ul .li {
+//  color: #ffffff
+//}
 
 // Media queries
 
@@ -127,14 +132,12 @@ main {
 //}
 
 
-.sidebar-fixed .list-group .active {
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  color: #D3D3D3;
-  background-color: /*#0099CC*/
-    #3F729B;
-}
-  
+//.sidebar-fixed .list-group .active {
+//  -webkit-box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
+//  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .16), 0 0px 0px 0 rgba(0, 0, 0, .12);
+//  -webkit-border-radius: 0;
+//  border-radius: 0;
+//  color: #20a8d8;
+//  background-color: #4B515D;
+//}
   
