--- a/restful-dms-ui/src/app/navigation/navigation.component.html
+++ b/restful-dms-ui/src/app/navigation/navigation.component.html
@@ -72,27 +72,26 @@
       <!-- Links -->
 
       <!-- Search form -->
-      <ul class="navbar-nav nav-flex-icons ">
-
-        <li class="nav-item">
-          <a class="nav-link" href="" mdbWavesEffect target="_blank">dfdf
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="" mdbWavesEffect target="_blank">
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link border border-light" href=""
-             mdbWavesEffect target="_blank">
-            <mdb-icon class="mr-2" fab icon=""></mdb-icon>test
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="ml-1 nav-link border border-light rounded" href="" mdbWavesEffect>
-            <mdb-icon class=" left" far icon=""></mdb-icon>
-          </a>
-        </li>
+      <ul class="navbar-nav nav-flex-icons">
+        <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="" mdbWavesEffect target="_blank">dfdf-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="" mdbWavesEffect target="_blank">-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+        <!--<a class="nav-link border border-light" href=""-->
+        <!--mdbWavesEffect target="_blank">-->
+        <!--<mdb-icon class="mr-2" fab icon=""></mdb-icon>test-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+        <!--<a class="ml-1 nav-link border border-light rounded" href="" mdbWavesEffect>-->
+        <!--<mdb-icon class=" left" far icon=""></mdb-icon>-->
+        <!--</a>-->
+        <!--</li>-->
       </ul>
     </links>
     <!-- Collapsible content -->
