--- a/restful-dms-ui/src/app/navigation/navigation.component.html
+++ b/restful-dms-ui/src/app/navigation/navigation.component.html
@@ -87,11 +87,13 @@
         <!--<mdb-icon class="mr-2" fab icon=""></mdb-icon>test-->
         <!--</a>-->
         <!--</li>-->
-        <!--<li class="nav-item">-->
-        <!--<a class="ml-1 nav-link border border-light rounded" href="" mdbWavesEffect>-->
-        <!--<mdb-icon class=" left" far icon=""></mdb-icon>-->
-        <!--</a>-->
-        <!--</li>-->
+        <li class="nav-item">
+          <a (click)="logout()" class="nav-link border border-light rounded white-text p-2" href="javascript:void(0)"
+                                mdbWavesEffect>
+            <mdb-icon class="pl-0 white-text" fas icon="sign-out-alt"></mdb-icon>
+            <strong>Wyloguj</strong>
+          </a>
+        </li>
       </ul>
     </links>
     <!-- Collapsible content -->
