--- a/restful-dms-ui/src/app/navigation/navigation.component.html
+++ b/restful-dms-ui/src/app/navigation/navigation.component.html
@@ -83,7 +83,9 @@
   <!-- Sidebar -->
 
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light fixed-top stylish-color-dark" [containerInside]="false">
+  <mdb-navbar
+    SideClass="navbar navbar-expand-lg navbar-dark text-white fixed-top stylish-color-dark" [containerInside]="false"
+    id="navbar">
 
     <!-- Navbar brand -->
     <logo class="ml-5">
@@ -93,28 +95,36 @@
     </logo>
 
     <!-- Collapsible content -->
-    <links class="justify-content-end">
-      <!-- Links -->
-      <!-- todo: tutaj umieścić nawigację boczną -->
+    <links class="justify-content-end ">
+      <!-- Mobile and tablet navigation -->
+      <ul class="navbar-nav mr-auto d-xl-none">
 
-      <!--<ul class="navbar-nav mr-auto">-->
-      <!--<li class="nav-item active">-->
-      <!--<a class="nav-link" mdbWavesEffect>Home-->
-      <!--<span class="sr-only">(current)</span>-->
-      <!--</a>-->
-      <!--</li>-->
-      <!--<li class="nav-item">-->
-      <!--<a class="nav-link" href="" mdbWavesEffect target="_blank">1</a>-->
-      <!--</li>-->
-      <!--<li class="nav-item">-->
-      <!--<a class="nav-link" href="" mdbWavesEffect target="_blank">2</a>-->
-      <!--</li>-->
-      <!--<li class="nav-item">-->
-      <!--<a class="nav-link" href="" mdbWavesEffect target="_blank">3</a>-->
 
-      <!--</li>-->
-      <!--</ul>-->
-      <!-- Links -->
+        <li class="nav-item">
+          <a class="nav-link" href="" mdbWavesEffect target="_blank">1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="" mdbWavesEffect target="_blank">2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="" mdbWavesEffect target="_blank">3</a>
+
+        </li>
+        <li class="nav-item dropdown" dropdown>
+          <a class="nav-link dropdown-toggle waves-light" dropdownToggle mdbWavesEffect mdbWavesEffect type="button">
+            Basic dropdown
+            <span class="caret"></span>
+          </a>
+          <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Action</a>
+            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Another action</a>
+            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Something else here</a>
+            <div class="divider dropdown-divider"></div>
+            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Separated link</a>
+          </div>
+        </li>
+      </ul>
+      <!--  -->
 
       <!-- Icons -->
       <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -127,7 +137,7 @@
           <a class="nav-link">
             <div class="btn-group" mdbDropdown>
               <mdb-icon class="text-white nav-icon" fas icon="user" mdbDropdownToggle></mdb-icon>
-              <div class="dropdown-menu dropdown-menu-right dropdown-primary">
+              <div class="dropdown-menu dropdown-menu-right dropdown-primary pt-0 pb-0">
                 <a class="dropdown-item" href="#">Twój profil</a>
                 <a class="dropdown-item" href="#">Ustawienia</a>
                 <a class="dropdown-item" href="#">Pomoc</a>
