--- a/restful-dms-ui/src/app/file/file.component.html
+++ b/restful-dms-ui/src/app/file/file.component.html
@@ -1,24 +1,29 @@
 <!--PoC upload file-->
-<div *ngIf="!showLoginCard" class="card-body p-0" id="registerCard">
+<div class="card-body p-0" id="registerCard">
+
+  <input (change)="changeListener($event)" accept="" type="file">
+
+  <div>
+    <h3>Result:</h3>
+    <a [download]="elo" [href]="sanitaze()" download="elo" target="_self" title='o ficheirinho de tostas.pdf'>eeee
+      aqui oh sashavore</a>
+    <h4>Base64 encoded:</h4>
+    <p>{{image?.replace("data:image/png;base64,", "")}}</p>
+    <p>{{image}}</p>
+    <p>{{pdf}}</p>
+    <h4>Image:</h4>
+    <img alt="" src="{{image}}">
+
+    <object [data]="sanitaze()"></object>
+    <!--<iframe class="pt-0" [src]="sanitaze()"></iframe>-->
+
+
+  </div>
+
+
   <!-- Default form register -->
   <form (ngSubmit)="onUpload()" [formGroup]="uploadForm" class="text-center p-4">
 
-    <input (change)="changeListener($event)" accept="" type="file">
-
-    <div>
-      <h3>Result:</h3>
-
-      <a [download]="elo" [href]="getSafeUrl()" download="elo" target="_self" title='o ficheirinho de tostas.pdf'>eeee
-        aqui oh sashavore</a>
-      <h4>Base64 encoded:</h4>
-      <p>{{image?.replace("data:image/png;base64,", "")}}</p>
-      <p>{{image}}</p>
-      <p>{{pdf}}</p>
-      <h4>Image:</h4>
-      <img alt="" src="{{image}}">
-
-
-    </div>
 
     <div class="md-form">
       <input class="form-control" formControlName="brief" id="brief" mdbInput type="text"/>
@@ -45,6 +50,5 @@
   </form>
   <!-- Default form register -->
 
-  <iframe *ngIf="url" [src]="getSafeUrl()" frameborder="0"></iframe>
-
+  <iframe *ngIf="url" [src]="sanitaze()" frameborder="0"></iframe>
 </div>
