--- a/restful-dms-ui/src/app/file/file.component.html
+++ b/restful-dms-ui/src/app/file/file.component.html
@@ -1,54 +1,54 @@
 <!--PoC upload file-->
-<div class="card-body p-0" id="registerCard">
+<main>
+  <div class="card-body p-0" id="registerCard">
 
-  <input (change)="changeListener($event)" accept="" type="file">
+    <input (change)="changeListener($event)" accept="" type="file">
 
-  <div>
-    <h3>Result:</h3>
-    <a [download]="elo" [href]="sanitaze()" download="elo" target="_self" title='o ficheirinho de tostas.pdf'>eeee
-      aqui oh sashavore</a>
-    <h4>Base64 encoded:</h4>
-    <p>{{image?.replace("data:image/png;base64,", "")}}</p>
-    <p>{{image}}</p>
-    <p>{{pdf}}</p>
-    <h4>Image:</h4>
-    <img alt="" src="{{image}}">
-
-    <object [data]="sanitaze()"></object>
-    <!--<iframe class="pt-0" [src]="sanitaze()"></iframe>-->
-
-
-  </div>
-
-
-  <!-- Default form register -->
-  <form (ngSubmit)="onUpload()" [formGroup]="uploadForm" class="text-center p-4">
-
-
-    <div class="md-form">
-      <input class="form-control" formControlName="brief" id="brief" mdbInput type="text"/>
-      <label for="brief">brief</label>
-
-    </div>
-
-    <!--File-->
     <div>
-      <input (change)="onFileSelect($event)" name="profile" type="file"/>
+      <h3>Result:</h3>
+      <a [download]="elo" [href]="sanitaze()" download="elo" target="_self" title='o ficheirinho de tostas.pdf'>eeee
+        aqui oh sashavore</a>
+      <h4>Base64 encoded:</h4>
+      <p>{{pdf}}</p>
+      <p>{{pdf}}</p>
+      <h4>Image:</h4>
+
+      <object [data]="sanitaze()"></object>
+      <!--<iframe class="pt-0" [src]="sanitaze()"></iframe>-->
+
+
     </div>
 
-    <!-- Sign in button -->
-    <button block="true" class="my-4 waves-effect z-depth-0 signInBtn" mdbBtn mdbWavesEffect outline="true"
-            type="submit">
-      Sign up
-    </button>
 
-    <p>
-      Already a member?
-      <a (click)="onSwitchLoginAndRegisterForm()" href="javascript:void(0);">Sign in</a>
-    </p>
+    <!-- Default form register -->
+    <form (ngSubmit)="onUpload()" [formGroup]="uploadForm" class="text-center p-4">
 
-  </form>
-  <!-- Default form register -->
 
-  <iframe *ngIf="url" [src]="sanitaze()" frameborder="0"></iframe>
-</div>
+      <div class="md-form">
+        <input class="form-control" formControlName="brief" id="brief" mdbInput type="text"/>
+        <label for="brief">brief</label>
+
+      </div>
+
+      <!--File-->
+      <div>
+        <input (change)="onFileSelect($event)" name="profile" type="file"/>
+      </div>
+
+      <!-- Sign in button -->
+      <button block="true" class="my-4 waves-effect z-depth-0 signInBtn" mdbBtn mdbWavesEffect outline="true"
+              type="submit">
+        Sign up
+      </button>
+
+      <p>
+        Already a member?
+        <a (click)="onSwitchLoginAndRegisterForm()" href="javascript:void(0);">Sign in</a>
+      </p>
+
+    </form>
+    <!-- Default form register -->
+
+    <iframe *ngIf="url" [src]="sanitaze()" frameborder="0"></iframe>
+  </div>
+</main>
