--- a/restful-dms-ui/src/app/_login/login.component.html
+++ b/restful-dms-ui/src/app/_login/login.component.html
@@ -69,7 +69,7 @@
 
             <!-- Register form -->
             <div id="registerCard" class="card-body p-0" *ngIf="!showLoginCard">
-              <!-- Default form register -->
+              <!-- Default form upload -->
               <form class="text-center p-4" [formGroup]="registerForm" (ngSubmit)="onRegister()">
 
                 <div class="md-form">
@@ -153,7 +153,7 @@
                 </p>
 
               </form>
-              <!-- Default form register -->
+              <!-- Default form upload -->
             </div>
           </div>
         </div>
