--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -2,7 +2,8 @@
 
 #intro {
     // background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg');
-  background-image: url('https://cdn.pixabay.com/photo/2016/01/16/01/00/blue-1142745_1280.jpg');
+  //background-image: url('https://cdn.pixabay.com/photo/2016/01/16/01/00/blue-1142745_1280.jpg');
+  background-image: url('assets/typewriter.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
