--- a/restful-dms-ui/src/app/_login/login.component.html
+++ b/restful-dms-ui/src/app/_login/login.component.html
@@ -51,7 +51,8 @@
                 </div>
 
                 <!-- Sign in button -->
-                <button mdbBtn outline="true" block="true" class="my-4 waves-effect z-depth-0 signInBtn" mdbWavesEffect
+                <button block="true" class="my-4 waves-effect z-depth-0 info-color-dark-button" mdbBtn mdbWavesEffect
+                        outline="true"
                         type="submit">
                   Sign in
                 </button>
@@ -142,7 +143,8 @@
                 </div>
 
                 <!-- Sign in button -->
-                <button mdbBtn outline="true" block="true" class="my-4 waves-effect z-depth-0 signInBtn" mdbWavesEffect
+                <button block="true" class="my-4 waves-effect z-depth-0 info-color-dark-button" mdbBtn mdbWavesEffect
+                        outline="true"
                         type="submit">
                   Sign up
                 </button>
